--- a/.htaccess
+++ b/.htaccess
@@ -1,17 +1,34 @@
 Options +FollowSymLinks
 RewriteEngine On
 
-RewriteCond %{HTTP_HOST} ^www.altynpool\.com$ [NC]
-RewriteRule ^(.*)$ http://altynpool.com/$1 [R=301,L]
+RewriteEngine on
+RewriteCond %{HTTP_HOST} ^www.altynpool.com [NC]
+RewriteRule ^(.*)$ http://altynpool.com/$1 [L,R=301,NC] 
 
-RewriteCond %{SERVER_PORT} ^80$ [OR]
-RewriteCond %{HTTP} =on
-RewriteRule ^(.*)$ https://altynpool.com/$1 [R=301,L]
+RewriteEngine On
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-ErrorDocument 404 /404.html
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} ^(.+)/$
+RewriteRule ^(.+)/$ http://www.altynpool.com/$1 [R=301,L]
 
-<IfModule mod_geoip.c>
-            GeoIPEnable On
-            RewriteCond %{ENV:GEOIP_COUNTRY_CODE} !^RU$
-            RewriteRule ^(.*)$ https://altynpool/ru/$1 [L]
-</IfModule>
+<ifModule mod_expires.c>
+
+ ExpiresActive On
+ #кэшировать флэш и изображения на одну неделю
+ ExpiresByType image/x-icon "access plus 7 days"
+ ExpiresByType image/jpeg "access plus 7 days"
+ ExpiresByType image/png "access plus 7 days"
+ ExpiresByType image/gif "access plus 7 days"
+ ExpiresByType application/x-shockwave-flash "access plus 7 days"
+ #кэшировать css, javascript и текстовые файлы на одну неделю
+ ExpiresByType text/css "access plus 7 days"
+ ExpiresByType text/javascript "access plus 7 days"
+ ExpiresByType application/javascript "access plus 7 days"
+ ExpiresByType application/x-javascript "access plus 7 days"
+ #кэшировать html и htm файлы на один день
+ ExpiresByType text/html "access plus 1 day"
+ #кэшировать xml файлы на десять минут
+ ExpiresByType application/xhtml+xml "access plus 10 minutes"
+</ifModule>
